aws-vpc-ec2-nginx/security_groups.tf
resource "aws_security_group" "sg-1" {
  vpc_id = aws_vpc.vpc-1.id
  name   = "allows_http"

  # Inbound
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Allow traffic from anywhere
  }

  # Outbound
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"          # Allow all outbound traffic
    cidr_blocks = ["0.0.0.0/0"] # Allow traffic to anywhere
  }

  tags = {
    Name = "sg-1"
  }
}
